# psarc-library

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  RELEASE-NOTES.md  docker-compose.yml  pyproject.toml
.github/: copilot-instructions.md
configuration/: config.json
docs/source/: index.rst  smg.rst
psarc-library-frontend/: jest.config.js  package-lock.json  package.json
psarc-library-frontend/src/app/: globals.css  layout.tsx  not-found.tsx
psarc-library-frontend/src/app/failures/: page.tsx
psarc-library-frontend/src/app/login/: page.tsx
psarc-library-frontend/src/app/songs/: page.tsx
psarc-library-frontend/src/app/validate/: page.tsx
psarc-library-frontend/src/components/: Footer.tsx  Navigation.tsx
psarc-library-frontend/src/components/__tests__/: Footer.test.tsx  Navigation.test.tsx
psarc-library-frontend/src/contexts/: AuthContext.tsx
psarc-library-frontend/src/lib/: api.ts  auth.ts  types.ts
psarc-library-frontend/src/lib/__tests__/: auth.test.ts
psarc_library/: __init__.py  constants.py  database.py  main.py  models.py  psarc.py  server.py
tests/: conftest.py  test_main.py  test_models.py  test_server.py
