[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "psarc-library"
version = "0.1.0"
description = "A web interface for parsing and exploring Rocksmith psarc files."
readme = "README.md"
requires-python = ">=3.13"
license = { file = "LICENSE" }
authors = [
    { name = "Javid Ahmed", email = "javidahmed@icloud.com" }
]
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "cachetools>=7.0.6",
    "numpy>=2.4.4",
    "pycryptodome>=3.23.0",
    "python-template-server @ git+https://github.com/javidahmed64592/python-template-server.git",
    "sqlmodel>=0.0.38",
]

[project.optional-dependencies]
dev = [
    "python-template-server[dev] @ git+https://github.com/javidahmed64592/python-template-server.git",
]
docs = [
    "python-template-server[docs] @ git+https://github.com/javidahmed64592/python-template-server.git",
]

[project.urls]
repository = "https://github.com/javidahmed64592/psarc-library"
documentation = "https://javidahmed64592.github.io/psarc-library"

[project.scripts]
psarc-library = "psarc_library.main:run"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build]
include = [
  "psarc_library/**",
  "static/**",
  ".here",
]

[tool.hatch.build.force-include]
"static" = "static"

[tool.pytest.ini_options]
addopts = [
    "-vv",
    "--cov",
    "--cov-report",
    "term-missing",
]
env = [
    "GAME_DIR=/path/to/steamapps/common/Rocksmith2014/",
    "PSARC_TOC_DECRYPTION_KEY=decryption_key",
]

[tool.coverage.run]
branch = true
source = ["psarc_library", "tests"]

[tool.coverage.report]
fail_under = 50
skip_covered = false
show_missing = true

[tool.ruff]
target-version = "py313"
line-length = 120
indent-width = 4

exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

extend-exclude = [
    "**/__init__.py",
]

[tool.ruff.lint]
select = [
    "A",
    "ANN",
    "ASYNC",
    "B",
    "C4",
    "D",
    "E",
    "EM",
    "F",
    "FBT",
    "G",
    "I",
    "ISC",
    "LOG",
    "N",
    "NPY",
    "PD",
    "PERF",
    "PL",
    "PT",
    "RET",
    "RUF",
    "S",
    "TRY",
    "UP",
    "W",
    "YTT",
]
ignore = [
    "D203",
    "D213",
    "PLR0913",
    "S101"
]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
warn_unused_configs = true
disallow_incomplete_defs = true
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true
pretty = true

[[tool.mypy.overrides]]
module = [
    "cachetools.*",
    "psarc_library.*",
    "python_template_server.*",
    "template_python.*",
]
ignore_missing_imports = true
